# openscad-documentation

./: CMakeLists.txt  README.md
.github/workflows/: full-release.yml  pdf.yml  release.yml
scripts/: config.yml  offline-doc-generator.py  requirements.txt
